feat: sync Google Sheets verification and attendance